--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    // height: 100vh;
     background-color: #f5f5f5;
 }
