--- a/src/app/new-game/new-game.component.html
+++ b/src/app/new-game/new-game.component.html
@@ -1,1 +1,20 @@
-<p>new-game works!</p>
+<div class="card" *ngIf="!game">
+    <div class="card-body">
+      <p class="card-text">Zumaroeth, the last continent on a dying planet.  As the ruler of a nation, you must guide your people via any means to success.  Blah blah blah.</p>
+    </div>
+  </div>
+<form>
+    <div class="form-group">
+        <label for="name">Nation Name</label>
+        <input type="text" class="form-control" id="name" [(ngModel)]="game.nationName" name="name">
+    </div>
+    <div class="form-group">
+        <label for="title">Your Ruler's Title</label>
+        <input type="text" class="form-control" id="title" [(ngModel)]="game.rulerTitle" name="title">
+    </div>
+    <div class="form-group">
+        <label for="rulerName">Your Ruler's Name</label>
+        <input type="text" class="form-control" id="name" [(ngModel)]="game.rulerName" name="rulerName">
+    </div>
+    <button [disabled]="!game.rulerName || !game.rulerTitle || !game.nationName" type="submit" class="btn btn-primary" (click)="createGame()">Create Game</button>
+</form>
