--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,7 @@
-
-<p>home works!</p>
+<div *ngIf="!!game">
+    Nation: {{game.nationName}} 
+    Ruler: {{game.rulerTitle}} {{game.rulerName}}
+</div>
 
 <div class="d-flex flex-row my-3">
     <a class="btn btn-primary mx-1" >Next Turn</a>
