--- a/src/app/new-game/new-game.component.html
+++ b/src/app/new-game/new-game.component.html
@@ -17,7 +17,7 @@
         <input type="text" class="form-control" id="name" [(ngModel)]="game.rulerName" name="rulerName">
     </div>
     <div class="form-group my-3">
-        <button [disabled]="!game.rulerName || !game.rulerTitle || !game.nationName" type="submit" class="btn btn-primary" (click)="createGame()">Begin Game</button>
+        <button [disabled]="isCreateDisabled()" type="submit" class="btn btn-primary" (click)="createGame()">Begin Game</button>
     </div>
     
 </form>
