--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,5 +5,6 @@
 </div>
 
 <div class="d-flex flex-row my-3">
-    <a class="btn btn-primary mx-1" (click)="nextTurn()">Next Turn</a>
+    <a *ngIf="!!game && game.alerts.length === 0" class="btn btn-primary mx-1" (click)="nextTurn()">Next Turn</a>
+    <a *ngIf="!!game && game.alerts.length > 0" class="btn btn-primary mx-1" (click)="showFirstAlert()">Alerts ({{game.alerts.length}})</a>
 </div>
