updating naming and other stuff

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="!!game">
     Nation: {{game.nationName}}
-    Ruler: {{game.rulerTitle}} {{game.rulerName}}
+    Ruler: {{game.rulerTitle}} {{game.ruler.firstName}} {{game.ruler.lastName}}
     Year: {{game.year}}
 </div>
 
