--- a/src/app/new-game/new-game.component.html
+++ b/src/app/new-game/new-game.component.html
@@ -1,4 +1,4 @@
-<div class="card" *ngIf="!game">
+<div class="card">
     <div class="card-body">
       <p class="card-text">Zumaroeth, the last continent on a dying planet.  As the ruler of a nation, you must guide your people via any means to success.  Blah blah blah.</p>
     </div>
@@ -6,15 +6,23 @@
 <form>
     <div class="form-group">
         <label for="name" class="form-label">Nation Name</label>
-        <input type="text" class="form-control" id="name" [(ngModel)]="game.nationName" name="name">
+        <input type="text" class="form-control" id="name" [(ngModel)]="nationName" name="name">
     </div>
     <div class="form-group">
         <label for="title" class="form-label">Your Ruler's Title</label>
-        <input type="text" class="form-control" id="title" [(ngModel)]="game.rulerTitle" name="title">
+        <input type="text" class="form-control" id="title" [(ngModel)]="title" name="title">
     </div>
     <div class="form-group">
-        <label for="rulerName" class="form-label">Your Ruler's Name</label>
-        <input type="text" class="form-control" id="name" [(ngModel)]="game.rulerName" name="rulerName">
+        <label for="firstName" class="form-label">Your Ruler's First Name</label>
+        <input type="text" class="form-control" id="firstName" [(ngModel)]="firstName" name="firstName">
+    </div>
+    <div class="form-group">
+        <label for="lastName" class="form-label">Your Ruler's First Name</label>
+        <input type="text" class="form-control" id="lastName" [(ngModel)]="lastName" name="lastName">
+    </div>
+    <div class="form-group">
+        <label for="age" class="form-label">Your Ruler's Starting Age</label>
+        <input type="number" class="form-control" id="age" [(ngModel)]="age" name="age" min="15" max="50">
     </div>
     <div class="form-group my-3">
         <button [disabled]="isCreateDisabled()" type="submit" class="btn btn-primary" (click)="createGame()">Begin Game</button>
