--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,5 +4,5 @@
     align-items: center;
     justify-content: center;
     // height: 100vh;
-    background-color: #f5f5f5;
+    // background-color: #f5f5f5;
 }
