--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="game-container">
-  <img src="./logo.png" />
-
+  <img class="img img-fluid" src="./logo.png" />
+  <br />
   <div class="ma-3">
     <router-outlet />
   </div>
