--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="!!game">
-    Nation: {{game.nationName}}
-    Ruler: {{game.rulerTitle}} {{game.ruler.firstName}} {{game.ruler.lastName}}
-    Year: {{game.year}}
+    <h4>Zumaroeth</h4>
+    <h6>Ruler: {{game.rulerTitle}} {{game.ruler.firstName}} {{game.ruler.lastName}}</h6>
+    <h6>Year: {{game.year}}</h6>
 </div>
 
 <div class="d-flex flex-row my-3">
