--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
         </ul>
     </div>
     <div class="card" >
-        <app-game-event *ngIf="!!currentEvent && !!game" [gameEvent]="currentEvent" [game]="game" ></app-game-event>
+        <app-game-event *ngIf="!!currentEvent && !!game" [gameEvent]="currentEvent" [game]="game" (eventDismissed)="reloadEvent()"></app-game-event>
     </div>
 </div>
 <div class="d-flex flex-row my-3">
