Adding sex to character creation

--- a/src/app/new-game/new-game.component.html
+++ b/src/app/new-game/new-game.component.html
@@ -27,6 +27,15 @@
                     <label for="age" class="form-label">Starting Age</label>
                     <input type="number" class="form-control" id="age" [(ngModel)]="age" name="age" min="25" max="50">
                 </div>
+                <div class="form-group">
+                    <label for="sex" class="form-label">Sex</label>
+                    <!-- <input type="number" class="form-control" id="age" [(ngModel)]="sex" name="sex" min="25" max="50"> -->
+                    <select class="form-select" id="sex" [(ngModel)]="sex" name="sex">
+                        <option value="F">Female</option>
+                        <option value="M">Male</option>
+                        <option value="X">Other</option>
+                    </select>
+                </div>
                 <div class="form-group my-3">
                     <button [disabled]="isCreateDisabled()" type="submit" class="btn btn-primary"
                         (click)="createGame()">Begin Game</button>
