--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,15 +2,30 @@
 <h6>Year: {{game?.year}}</h6>
 <div *ngIf="!!game" class="d-flex flex-wrap">
     <div class="card">
-        <ul class="list-group">
-            <li *ngFor="let event of events" class="list-group-item" (click)="select(event)" style="cursor: pointer">
-                <img class="img img-thumbnail" src="{{event.image}}" />
-                {{event.header}}
-            </li>
-        </ul>
+        <h5 class="card-header">Events</h5>
+        <div class="card-body">
+            <ul class="list-group" *ngIf="events.length > 0">
+                <li *ngFor="let event of events" class="list-group-item" (click)="select(event)"
+                    style="cursor: pointer">
+                    <img class="img img-thumbnail" src="{{event.image}}" />
+                    {{event.header}}
+                </li>
+            </ul>
+            <div *ngIf="events.length == 0">
+                <h5>No events to display</h5>
+            </div>
+        </div>
     </div>
-    <div class="card" >
-        <app-game-event *ngIf="!!currentEvent && !!game" [gameEvent]="currentEvent" [game]="game" (eventDismissed)="reloadEvent()"></app-game-event>
+    <div class="card">
+        <h5 class="card-header">Current Event</h5>
+        <app-game-event *ngIf="!!currentEvent && !!game" [gameEvent]="currentEvent" [game]="game"
+            (eventDismissed)="reloadEvent()"></app-game-event>
+    </div>
+    <div class="card">
+        <h5 class="card-header">Character Profile</h5>
+    </div>
+    <div class="card">
+        <h5 class="card-header">Aristocracy</h5>
     </div>
 </div>
 <div class="d-flex flex-row my-3">
