Adding death icon

--- a/src/app/components/game-event/game-event.component.html
+++ b/src/app/components/game-event/game-event.component.html
@@ -1,5 +1,5 @@
-<div class="card">
-    <img class="img img-thumbnail" src="{{gameEvent()?.image}}" />
+<div class="card" >
+    <img class="img img-thumbnail" src="img/{{gameEvent()?.image}}" />
     <div class="card-body">
         <h5 class="card-title">{{gameEvent()?.header}}</h5>
         <p class="card-text">{{gameEvent()?.description}}</p>
